[package]
name = "rsst"
version = "0.1.0"
authors = ["quinoa42 <quinoa42 dot echo at gmail dot com>"]
edition = "2018"
description = "a commandline tool that dump articles in followed feeds into offline files."
license = "MIT"

[dependencies]
structopt = "0.2"
toml = "0.4"
md5 = "0.6"
html5ever = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rss = { version = "1.7", features = ["from_url"] }
